Add media queries and tune UI

--- a/covered-bridge-squeeze-page/public/index.html
+++ b/covered-bridge-squeeze-page/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <!-- <meta charset="utf-8" name="robots" content="noindex, nofollow" /> <!-- WARNING: REMOVE ON PRODUCTION! -->
+    <!-- ALSO DELETE THE VERCEL.JSON FILE AND _MIDDLEWARE.JS -->
     <link rel="icon" href="/favicon.bmp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#F5F5F5" />
